feat: Remove unnecessary Login endpoints
